--- a/colorgameApp/index.html
+++ b/colorgameApp/index.html
@@ -18,6 +18,11 @@
     <button class="mode">Easy</button>
     <button class="mode selected">Hard</button>
   </div>
+  <h3 id="fontcolor">INSTRUCTION - Check the RGB number stated above and pick the right color.
+    If correctly picked, all turns the same color else it disappears and you have to try again.</h3> 
+
+
+
 
   <div id="container">
       <div class="square"></div>
