--- a/colorgameApp/index.html
+++ b/colorgameApp/index.html
@@ -19,7 +19,7 @@
     <button class="mode selected">Hard</button>
   </div>
   <h3 id="fontcolor">INSTRUCTION - Check the RGB number stated above and pick the right color.
-    If correctly picked, all turns the same color else it disappears and you have to try again.</h3> 
+    If correctly picked, all turns the same color else it disappears if wrong color is picked and you have to try again.</h3>
 
 
 
